[package]
name = "openqasm-rust"
version = "0.1.0"
authors = ["John Lapeyre <john.lapeyre@ibm.com>"]
repository = "https://github.com/jlapeyre/openqasm-rust"
description = "openqasm reference parser using rust target"
readme = "README.md"
edition = "2018"
license = "Apache-2.0"
exclude = ["/build.rs","/grammars","/templates"]

[dependencies]
antlr-rust = "0.3.0-beta"
clap = { version = "4.0", features = ["derive"] }

[lib]
name="openqasm" 

[[bin]]
name = "qasmparsedemo"

#[[test]]
#name = "my_test"
#path="tests/my_test.rs"

[profile.release]
debug = true
#opt-level = 3

